--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
       </div>
     </nav>
 
-    <section class="intro">
-      <img src="myPhoto.webp" alt="myPhoto" />
-      <div>
+    <section class="intro col text-center">
+      <img class="row hidden" src="myPhoto.webp" alt="myPhoto" />
+      <div class="row">
         <h1>Albatol Alshahrani</h1>
         <h2>Web Devloper</h2>
       </div>
